tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_in_function_call.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
var x:int = 42

